# KISTI_APOLLO_AI

./: README.md
apollo-ai-m1/: Jenkinsfile  README.md  add_json_data.py  config.py  extract_nouns.py  main.py  pyproject.toml  sbert_pool.py  start.sh  stop.sh
apollo-ai-m1/tests/: test.py
apollo-ai-m2/: Dockerfile  Jenkinsfile  README.md  df_out.py  main.py  pyproject.toml  reduce.py  restapi.py  start.sh
apollo-ai-m2/app/: config.py
apollo-ai-m6/: Jenkinsfile  README.md  data_connect.py  graph_data.py  main.py  paths.py  plus_func.py  preprocess_category.py  pyproject.toml  show_wiki.py  start.sh
apollo-ai-m6-chroma/: Dockerfile  Jenkinsfile  README.md  create_index_from_es.py  main.py  plib_new.py  pyproject.toml  start.sh  stop.sh
apollo-ai-m6-chroma/src/: config.py  database.py  search_engine.py  utils.py  vector_db.py
apollo-ai-m6-crawler/: README.md  pyproject.toml  run.py
apollo-ai-m6-crawler/config/: M6 시드.xlsx  data_test.conf  path.py  wiki_rule.xlsx
apollo-ai-m6-crawler/dbscript/: ddl.sql
apollo-ai-m6-crawler/module/: clean.py  data_connect.py  logger.py  plus_func.py  proc_data.py  proc_edit_dump.py  proc_enwiki_dump.py  proc_metrics_tb.py  proc_seed_expand.py  proc_wiki_pageview.py
apollo-ai-m6-crawler/pages/: 1_1. WIKI DUMP DOWNLOAD.py  2_2. WIKI EDIT DOWNLOAD.py  3_3. MAKE ITEM LIST.py  4_4. WIKI PAGEVIEW CRAWL.py  5_5. WIKI MAKE TABLE.py
