[project]
name = "apollo-ai-m1"
version = "0.1.0"
description = ""
authors = [
    {name = "solideos",email = "urim.chae@solideos.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "pymilvus (>=2.6.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "konlpy (>=0.6.0,<0.7.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sentence-transformers (==5.1.1)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "torch (==2.6.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
