[project]
name = "apollo-ai-m6-chroma"
version = "0.1.0"
description = ""
authors = [
    {name = "solideos",email = "urim.chae@solideos.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "flask (>=3.1.2,<4.0.0)",
    "onnxruntime (==1.16.3)",
    "chromadb (>=1.0.21,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sentence-transformers (==5.1.1)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "elasticsearch (==9.1.1)",
    "torch (==2.6.0)",
    "mysql-connector-python (>=9.5.0,<10.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
