[project]
name = "apollo-ai-m6-crawler"
version = "0.1.0"
description = ""
authors = [
    {name = "solideos",email = "urim.chae@solideos.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "pymssql (>=2.3.7,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "dask[dataframe] (>=2025.9.0,<2026.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "networkx (>=3.5,<4.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false